# combine

./: .gitignore  .gitmodules
C8_master/: C8_BOM.numbers
C9_master/: .core_master.zip.icloud
C9_master/core_master/: libtool  (+2 more)
C9_master/core_master/tests/: Makefile  Makefile.am  Makefile.in  kinetic_test  matrix_test  system_test
C9_master/core_master/tests/.libs/: kalman_test  kinetic_test  system_test
C9_master/core_master/tests/kinetic_tests/: kalman_test.c  kinetic_test.c  matrix_test.c
C9_master/core_master/tests/system_tests/: startup_test.c
C9_master/core_master/tests/system_tests/.deps/: system_test-startup_test.Po
general/: rho - Shortcut.lnk
kinetic/: kinetic.c  sensor_data_types.h
master/C10_master/core_master/ble-module/: Makefile  Makefile.am  Makefile.in  ble-module.isc  create_ebl_files.bat  create_ebl_files.sh  efr_main.c  lib_ble_kinetic.la  lib_ble_matrix.la  lib_ble_system.la  libble.la
master/C10_master/core_master/ble-module/.libs/: lib_ble_kalman.0.dylib  lib_ble_kalman.la  lib_ble_kinetic.0.dylib  lib_ble_kinetic.dylib  lib_ble_kinetic.la  lib_ble_kinetic.lai  lib_ble_matrix.0.dylib  lib_ble_matrix.la  lib_ble_matrix.lai  lib_ble_system.0.dylib  lib_ble_system.dylib  lib_ble_system.lai  main
master/C10_master/core_master/ble-module/IAR ARM - Default/: ble-module.hex  ble-module.out  ble-module.s37
master/C10_master/core_master/ble-module/IAR ARM - Default/emlib/: em_adc.d  em_gpio.d  em_leuart.d
master/C10_master/core_master/ble-module/IAR ARM - Default/sensors/camera/: cam_controller.d  subdir.mk
master/C10_master/core_master/ble-module/IAR ARM - Default/sensors/imu/: subdir.mk
master/C10_master/core_master/ble-module/IAR ARM - Default/sensors/touch/: CPT112S.d
master/C10_master/core_master/ble-module/IAR ARM - Default/src/: InitDevice.d
master/C10_master/core_master/ble-module/IAR ARM - Default/system/: subdir.mk
master/C10_master/core_master/ble-module/IAR ARM - Default/system/utilities/: clock_sp.d  data_types.d
master/C10_master/core_master/ble-module/app/: app.c  app.h  app_interrupts.c  app_interrupts.h
master/C10_master/core_master/ble-module/ble/: ble-configuration.h  gatt_db.h
master/C10_master/core_master/ble-module/kinetic/: kinetic.c  matrix.h
master/C10_master/core_master/ble-module/kinetic/.deps/: matrix.Plo
master/C10_master/core_master/ble-module/linker/: bleDemo.icf
master/C10_master/core_master/ble-module/sensors/: sensor_data_types.h
master/C10_master/core_master/ble-module/sensors/camera/.deps/: cam_controller.Plo
master/C10_master/core_master/ble-module/sensors/imu/: LSM9DS1.lo  LSM9DS1_regs.c  LSM9DS1_types.h
master/C10_master/core_master/ble-module/sensors/imu/.deps/: LSM9DS1.Plo
master/C10_master/core_master/ble-module/sensors/touch/: CPT112S.c
master/C10_master/core_master/ble-module/src/: InitDevice.c
master/C10_master/core_master/ble-module/system/: board_features.h  startup.h
master/C10_master/core_master/ble-module/system/utilities/: PCA9534A.h  clock_sp.c  data_types.h  usart_sp.h
master/C10_master/core_master/ble-module/testing/: ble_core_stubs.c  ble_core_stubs.lo
master/C9_master/core_master/tests/: Makefile  Makefile.am  kalman_test  kinetic_test  math_extern.h  matrix_test  system_test
master/C9_master/core_master/tests/.libs/: kinetic_test  matrix_test
master/C9_master/core_master/tests/kinetic_tests/: a.out  matrix_benchmark.cpp
master/C9_master/core_master/tests/kinetic_tests/.deps/: kalman_test-kalman_test.Po  kinetic_test-kalman_test.Po  kinetic_test-kinetic_test.Po  kinetic_test-matrix_test.Po  kinetic_tests-matrix_test.Po  matrix_test-matrix_test.Po
tau/: .tau_extended_description.pages.icloud
(+3114 files in other folders)
